# openfang

./: -w  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  AGENT_ID_FIX_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  FORK-CUSTOMIZATIONS.md  HANDOFF.md  HEARTBEAT.md  MEDIA_GROUP_FIX.md  MIGRATION.md  PHASE-5-BLUEPRINT.md  PROJECTS.md  PROJECT_OVERVIEW.md  README.md  README_CN.md  RELEASE_CHECKLIST_0.3.40.md  RELEASE_NOTES_0.3.40.md  ROADMAP.md  ROOT_CAUSE_AND_FIX.md  SECURITY.md  SHIPINBOT_INTEGRATION_GUIDE.md  TELEGRAM_MEDIA_BATCH_IMPLEMENTATION.md  TELEGRAM_VIDEO_HANDLING_IMPROVEMENT.md  TODO.md  audit.toml  build-dev.sh  clean_start.rs  cy-combined.txt  cypress-output.txt  cypress-run2.txt  deploy-media-group-fix.sh  (+16 more)
.cargo/: audit.toml
.github/: copilot-instructions.md  pull_request_template.md
.qqbot/: session-1903709601-0.json
agents/: AGENTS.md
config-sample/: config.toml
crates/: AGENTS.md
crates/fang-cli/: Cargo.toml
crates/fang-cli/src/: auth.rs  config.rs  lib.rs  main.rs  manifest.rs  packager.rs
crates/fang-cli/src/commands/: info.rs  install.rs  login.rs  logout.rs  mod.rs  package.rs  publish.rs  search.rs
crates/fanghub-registry/: Cargo.toml
crates/fanghub-registry/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  store.rs
crates/fanghub-registry/src/ui/: mod.rs
crates/fanghub-registry/src/ui/components/: layout.rs  mod.rs  package_card.rs  stats_bar.rs
crates/fanghub-registry/src/ui/pages/: dashboard.rs  home.rs  mod.rs  not_found.rs  package.rs  search.rs
crates/maestro-algorithm/: Cargo.toml
crates/maestro-algorithm/src/: error.rs  executor.rs  isc.rs  lib.rs  phases.rs  prompts.rs  tests.rs  types.rs
crates/maestro-cache/: Cargo.toml
crates/maestro-cache/src/: caching_memory.rs  l1.rs  l2.rs  lib.rs
crates/maestro-eval/: Cargo.toml
crates/maestro-eval/src/: lib.rs  swe.rs  swe_runner.rs  swe_suites.rs  v1.rs
crates/maestro-falkor-analytics/: Cargo.toml
crates/maestro-falkor-analytics/src/: config.rs  etl.rs  lib.rs  queries.rs
crates/maestro-falkor-analytics/tests/: integration.rs
crates/maestro-guardrails/: Cargo.toml
crates/maestro-guardrails/src/: lib.rs
crates/maestro-guardrails/src/scanners/: custom_regex.rs  mod.rs  pii.rs  prompt_injection.rs  topic_control.rs  toxicity.rs
crates/maestro-integration-tests/: Cargo.toml
crates/maestro-integration-tests/src/: lib.rs
crates/maestro-integration-tests/tests/: algorithm_maestro.rs  desktop_ui.rs  eval_suite.rs  fanghub_marketplace.rs  guardrails_pipeline.rs  hand_lifecycle.rs  kernel_boot.rs  multi_agent_mesh.rs  observability_traces.rs
crates/maestro-knowledge/: Cargo.toml
crates/maestro-knowledge/src/: ingestion.rs  lib.rs
crates/maestro-marketplace/: Cargo.toml
crates/maestro-marketplace/src/: lib.rs
crates/maestro-model-hub/: Cargo.toml
crates/maestro-model-hub/src/: lib.rs  registry.rs  router.rs
crates/maestro-observability/: Cargo.toml
crates/maestro-observability/src/: alerts.rs  audit.rs  cost.rs  lib.rs  metrics.rs  traces.rs
crates/maestro-pai/: Cargo.toml
crates/maestro-pai/src/: hooks.rs  lib.rs  patterns.rs  telos.rs  wisdom.rs
crates/maestro-rlm/: Cargo.toml
crates/maestro-rlm/src/: command.rs  executor.rs  lib.rs  repl.rs
crates/maestro-sdk/: Cargo.toml
crates/maestro-sdk/src/: lib.rs
crates/maestro-surreal-memory/: Cargo.toml
crates/maestro-surreal-memory/src/: lib.rs  session.rs  usage.rs
crates/maestro-swe/: Cargo.toml
crates/maestro-swe/src/: executor.rs  lib.rs  main.rs  protocol.rs
crates/openfang-a2a/: Cargo.toml
crates/openfang-a2a/src/: engine.rs  error.rs  lib.rs  protocol.rs  transport.rs
crates/openfang-auth/: Cargo.toml
crates/openfang-auth/src/: lib.rs  middleware.rs
crates/openfang-auth/src/providers/: ldap.rs  mod.rs
crates/openfang-kernel/: AGENTS.md  Cargo.toml
crates/openfang-kernel/src/: AGENTS.md  a2a_registry.rs  approval.rs  auth.rs  config.rs  config_reload.rs  cron.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  media_engine.rs  mesh.rs  metering.rs  pairing.rs  persona_registry.rs  persona_tools.rs  registry.rs  research_planner.rs  supervisor_engine.rs  swarm_planner.rs  swarm_registry.rs  swe_a2a_handler.rs  telegram_local_api.rs  tool_registry.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  work_executor.rs  workflow.rs
crates/openfang-kernel/tests/: hand_restore_integration_test.rs  integration_test.rs  multi_agent_test.rs  recovery_health_integration_test.rs  session_resume_integration_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/openfang-mcp-bridge/: Cargo.toml
crates/openfang-mcp-bridge/src/: lib.rs  main.rs  protocol.rs
crates/openfang-memory/: AGENTS.md  Cargo.toml
crates/openfang-memory/src/: AGENTS.md  agency_profiles.rs  auth.rs  backends.rs  external.rs  helpers.rs  jsonl.rs  lib.rs  mempalace.rs  migration.rs  obsidian.rs  planner.rs  research.rs  session.rs  structured.rs  substrate.rs  usage.rs  work_item.rs
crates/openfang-memory/src/http/: mod.rs  semantic.rs
crates/openfang-memory/src/mongo/: consolidation.rs  indexes.rs  knowledge.rs  mod.rs  semantic.rs  session.rs  structured.rs  usage.rs
crates/openfang-memory/src/planner/: planner_agents.rs  planner_inference.rs  planner_service.rs  planner_store.rs  planner_today.rs
crates/openfang-memory/src/postgres/: audit.rs  consolidation.rs  knowledge.rs  migration.rs  mod.rs  paired_devices.rs  semantic.rs  session.rs  structured.rs  task_queue.rs  usage.rs
crates/openfang-memory/src/qdrant/: mod.rs  semantic.rs
crates/openfang-memory/src/sqlite/: audit.rs  consolidation.rs  knowledge.rs  migration.rs  mod.rs  paired_devices.rs  semantic.rs  session.rs  structured.rs  task_queue.rs  usage.rs
crates/openfang-memory/tests/: backend_integration.rs
crates/openfang-mesh/: Cargo.toml
crates/openfang-mesh/src/: client.rs  lib.rs  router.rs
deploy/: AGENTS.md  README.md  openfang-alerts.yml  openfang-backup.service  openfang-backup.timer  (+3 more)
(+981 files in other folders)
