[package]
name = "fang-cli"
description = "fang — the command-line tool for publishing and managing OpenFang Hand packages on FangHub."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fang"
path = "src/main.rs"

[lib]
name = "fang_cli"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
reqwest.workspace = true
toml.workspace = true
semver.workspace = true
sha2.workspace = true
base64.workspace = true
dirs.workspace = true
walkdir.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
urlencoding.workspace = true
