[package]
name = "maestro-knowledge"
description = "Knowledge/RAG system inspired by Kore.ai's Knowledge AI. Integrates Rig.rs vector stores for semantic search, document ingestion, and retrieval-augmented generation."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
rig-core.workspace = true
sha2.workspace = true
surrealdb = { workspace = true }
chrono.workspace = true
reqwest = { version = "0.12.2", features = ["json"] }
