[package]
name = "maestro-surreal-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SurrealDB-based memory substrate for OpenFang"

[dependencies]
openfang-types = { path = "../openfang-types" }
surrealdb = { version = "3", features = ["kv-mem", "kv-rocksdb"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = { workspace = true }
