[package]
name = "openfang-auth"
version = "0.1.0"
edition = "2021"
description = "External authentication providers for OpenFang"
license = "MIT"

[dependencies]
# Core dependencies
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.59"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38", features = ["sync", "rt-multi-thread", "time"] }
regex = "1.10.4"

# LDAP support
ldap3 = "0.12.1"
native-tls = "0.2.12"
tokio-native-tls = "0.3.1"

# OpenFang types
openfang-types = { path = "../openfang-types" }

# Logging
tracing = "0.1.40"
log = "0.4.21"

[dev-dependencies]
tokio-test = "0.4.4"

[features]
default = []
ldap = []  # Enable LDAP provider (enabled by default)