[package]
name = "openfang-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the OpenFang Agent OS"

[dependencies]
openfang-a2a = { path = "../openfang-a2a" }
openfang-types = { path = "../openfang-types" }
maestro-cache = { path = "../maestro-cache" }
openfang-memory = { path = "../openfang-memory" }
openfang-runtime = { path = "../openfang-runtime" }
openfang-skills = { path = "../openfang-skills" }
openfang-hands = { path = "../openfang-hands" }
openfang-extensions = { path = "../openfang-extensions" }
openfang-wire = { path = "../openfang-wire" }
openfang-channels = { path = "../openfang-channels" }
maestro-falkor-analytics = { path = "../maestro-falkor-analytics" }
maestro-algorithm = { path = "../maestro-algorithm" }
maestro-guardrails = { path = "../maestro-guardrails" }
maestro-observability = { path = "../maestro-observability" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }



maestro-swe = { path = "../maestro-swe" }
