[package]
name = "openfang-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SurrealDB v3 memory substrate for the OpenFang Agent OS"

[dependencies]
openfang-types = { path = "../openfang-types" }
surrealdb = { version = "3", features = ["kv-mem", "kv-surrealkv"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = { workspace = true }
